Fix scrolling in first navigation level on mobiles.

--- a/src/scss/components/_collection-tree.scss
+++ b/src/scss/components/_collection-tree.scss
@@ -9,8 +9,13 @@
 		display: flex;
 		flex-direction: column;
 
-		.scroll-container {
+		.level-root {
 			flex: 1 1 auto;
+		}
+
+		.scroll-container {
+			overflow: auto;
+		  height: 100%;
 		}
 	}
 
